Remove duplicated surefire property in poms